# Kimi-VL-Unofficial

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
configs/: default.yaml
scripts/: smoke_test.py
src/kimi_vl_unofficial/: model.py
